Commit al master blogpost, cambios en diseño css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     </head>
 
     <body>
-        <h1> Nuestro TITULO  </h1>
-        <p> Nuestro Parrafo</p>
+        <header>
+            <h1 class="title"> Git and Git Hub </h1>
+        </header>
+
+        <section class="container_content">
+            
+            <p class="paragraph"> Nuestro Parrafo</p>
+        </section>
     </body>
 
 </html>
