Se agrego un header al index

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     </head>
 
     <body>
-        <header>
-            <h1 class="title"> Git and Git Hub </h1>
+        <header class="header" id="#header">
+            Esta es mi cabecera
         </header>
 
+        <h1 class="title"> Git and Git Hub </h1>
+
         <section class="container_content">
-            
             <p class="paragraph"> Nuestro Parrafo</p>
         </section>
     </body>
