--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header class="header" id="#header">
-            Esta es mi cabecera
+            <h2 class="header__h2">Hyperblog - <span> Tu blog de confianza </span></h2>
         </header>
 
         <h1 class="title"> Git and Git Hub </h1>
