Cambios en el header, color body y nuevo parrafo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header class="header" id="#header">
-            <h2 class="header__h2">Hyperblog - <span> Tu blog de confianza </span></h2>
+            <h2 class="header__h2">Hyperblog - <span> Tu blog de noticias en git</span></h2>
         </header>
 
         <h1 class="title"> Git and Git Hub </h1>
@@ -30,6 +30,10 @@
                 El control de versiones se realiza principalmente en la industria informática para controlar las distintas versiones del código fuente dando lugar a los sistemas de 
                 control de código fuente o SCM (siglas del inglés Source Code Management). Sin embargo, los mismos conceptos son aplicables a otros ámbitos como documentos, imágenes, 
                 sitios web, etc. </p>
+
+            <p> Linus Torvalds buscaba un sistema distribuido que pudiera usar en forma semejante a BitKeeper, pero ninguno de los sistemas bajo software libre disponibles cumplía 
+                con sus requerimientos, especialmente en cuanto a desempeño. El diseño de Git mantiene una enorme cantidad de código distribuida y gestionada por mucha gente, que 
+                incide en numerosos detalles de rendimiento, y de la necesidad de rapidez en una primera implementación. </p>
         </section>
     </body>
 
