Se agrego logo al header, y se cambio color de body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <body>
         <header class="header" id="#header">
+            <figure class="header__container">
+                <img class="header__container-img" src="./images/git-icon.png" alt="Logo de Github">
+            </figure>
             <h2 class="header__h2">Hyperblog - <span> Tu blog de noticias en git</span></h2>
         </header>
 
