Se corrigió las tildes con entidades y se quito height fijo de container

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1 class="title"> Git and Git Hub </h1>
 
         <section class="container_content">
-            <p class="paragraph"> Se llama control de versiones a la gestión de los diversos cambios que se realizan sobre los elementos de algún producto o una configuración del 
+            <p class="paragraph"> Se llama control de versiones a la gestión de los diversos cambios que se realizan sobre los elementos de alg&uacute;n producto o una configuración del 
                 mismo. Una versión, revisión o edición de un producto, es el estado en el que se encuentra el mismo en un momento dado de su desarrollo o modificación. <br /><br />
 
                 Aunque un sistema de control de versiones puede realizarse de forma manual, es muy aconsejable disponer de herramientas que faciliten esta gestión dando lugar 
@@ -36,7 +36,7 @@
                 con sus requerimientos, especialmente en cuanto a desempeño. El diseño de Git mantiene una enorme cantidad de código distribuida y gestionada por mucha gente, que 
                 incide en numerosos detalles de rendimiento, y de la necesidad de rapidez en una primera implementación. </p>
         </section>
-
+        
         <footer class="footer">
             <p> Desarrollado con cariño por @byjo &lt;3 </p>
         </footer>
