--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
             <p> Linus Torvalds buscaba un sistema distribuido que pudiera usar en forma semejante a BitKeeper, pero ninguno de los sistemas bajo software libre disponibles cumplía 
                 con sus requerimientos, especialmente en cuanto a desempeño. El diseño de Git mantiene una enorme cantidad de código distribuida y gestionada por mucha gente, que 
                 incide en numerosos detalles de rendimiento, y de la necesidad de rapidez en una primera implementación. </p>
+
+            <h1 class="title">Git Krankeeeen</h1>
+
+            <figure class="figure__container">
+                <img class="figure__container-img" src="./images/git-kraken.png" alt="Interfaz git kraken">
+            </figure>
+            
         </section>
-        
+
         <footer class="footer">
             <p> Desarrollado con cariño por @byjo &lt;3 </p>
         </footer>
